syntax = "proto3";
package user;

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
}

message RegisterUserResponse {
    string user_id = 1;
    string message = 2;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string username = 1;
    string message = 2;
}
